--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,7 @@
         <span></span>
       </div>
     </div>
+
     <div id="navbar-menu-id" class="navbar-menu">
       <div class="navbar-end">
         <a class="navbar-item">
@@ -55,8 +56,12 @@
     </div>
   </nav>
 </section>
+
+
 <title>Flaskex</title>
-<section class="hero is-primary is-bold is-medium">
+
+
+<section class="is-bold is-medium" >
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="columns">
@@ -64,100 +69,28 @@
           <br>
           <p class="title is-2">883회차(2019-11-2)</p>
           <p class="subtitle is-4">예상번호 상위 6개</p>
-          <table>
-            <tbody>
-            <tr>
-              <th>
-                <div id="circle1">1</div>
-              </th>
-              <th>
-                <div id="circle2">2</div>
-              </th>
-              <th>
-                <div id="circle3">3</div>
-              </th>
-              <th>
-                <div id="circle4">4</div>
-              </th>
-              <th>
-                <div id="circle5">5</div>
-              </th>
-              <th>
-                <div id="circle6">6</div>
-              </th>
-            </tr>
-            <tr>
-              <th>
-                <div id="per1">1</div>
-              </th>
-              <th>
-                <div id="per2">2</div>
-              </th>
-              <th>
-                <div id="per3">3</div>
-              </th>
-              <th>
-                <div id="per4">4</div>
-              </th>
-              <th>
-                <div id="per5">5</div>
-              </th>
-              <th>
-                <div id="per6">6</div>
-              </th>
-            </tr>
-
-            </tbody>
-          </table>
-
-          <p class="subtitle is-5">&#x2022 Encrypted user authorizaton</p>
-          <p class="subtitle is-5">&#x2022 Ready to go database system</p>
-          <p class="subtitle is-5">&#x2022 User login, signup, and settings</p>
+          <div class = "container has-text-centered">
+            <button class = "button is-rounded lotto-circle lotto-num1">Button</button>
+            <button class = "button is-rounded lotto-circle lotto-num2">Button</button>
+            <button class = "button is-rounded lotto-circle lotto-num3">Button</button>
+            <button class = "button is-rounded lotto-circle lotto-num4">Button</button>
+            <button class = "button is-rounded lotto-circle lotto-num5">Button</button>
+            <button class = "button is-rounded lotto-circle lotto-num6">Button</button>
+          </div>
+          <p class = "subtitle is-5">최근 5회차 당첨번호 10,000회 분석수행</p>
         </div>
         <div class="column is-auto">
-          <div id="signup-box" class="signup-box">
-            <div class="signup-area">
-              <h1 class="title">Sign Up</h1>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-user" class="input is-success" type="text" placeholder="Username">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-user"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-mail" class="input is-success" type="text" placeholder="Email">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-envelope"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-pass" class="input" type="password" placeholder="Password">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-lock"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <br>
-              <a id="signup-button" class="form-button button is-primary is-inverted is-outlined">Sign Up</a>
-              <br>
-              <br>
-              <i><a id="feedback" class="feedback"></a></i>
-            </div>
+          <div class="buttons">
+            <button class="button is-primary is-light">최근 5회차</button>
+            <button class="button is-primary is-light">최근 10회차</button>
+            <button class="button is-primary is-light">최근 30회차</button>
+            <button class="button is-primary is-light">최근 50회차</button>
+            <button class="button is-primary is-light">최근 100회차</button>
+            <button class="button is-primary is-light">최근 300회차</button>
+            <button class="button is-primary is-light">최근 500회차</button>
+            <button class="button is-primary is-light">모든 회차</button>
           </div>
+
         </div>
       </div>
     </div>
@@ -168,10 +101,10 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          <strong>Flaskex</strong> by Anthony Federico
+          <strong>LottoML</strong>   by Django Han
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
-          </span>2017</a>
+          </span>2019</a>
         </p>
         <p>
           <a class="icon has-text-primary" href="https://github.com/anfederico" target="_blank">
